[package]
name = "yamc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.0-rc2"
futures = "0.3.21"
futures-timer = "3.0.2"

[dependencies.crossterm]
version = "0.23.2"
features = ["event-stream"]

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]